fixing visual bugs on mobile mode on administration pages

--- a/frontend/src/components/ManagmentComponents/CategoriesManagement/CategoriesForm/index.css
+++ b/frontend/src/components/ManagmentComponents/CategoriesManagement/CategoriesForm/index.css
@@ -28,6 +28,9 @@
 }
 
 @media (max-width : 500px) {
+    .categories-form-dialog{
+        width: 95%;
+    }
     .category-image-field{
         flex-direction: column;
     }
