--- a/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ManagmentProductsPageHeader/index.css
+++ b/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ManagmentProductsPageHeader/index.css
@@ -8,6 +8,7 @@
     padding-left: 0;
     margin: 0 auto;
     margin-bottom: 10px;
+    overflow: hidden;
 }
 
 .back-button-title-container{
