--- a/frontend/src/components/ManagmentComponents/PromotionsManagementComponents/PromotionsGrid/index.css
+++ b/frontend/src/components/ManagmentComponents/PromotionsManagementComponents/PromotionsGrid/index.css
@@ -78,6 +78,7 @@
     .promotions-management-grid{
         grid-template-columns: 100%;
         grid-template-rows: auto;
+        align-content: flex-start;
     }
 
     .promotions-management-grid .promotion-management-card{
